2011-03-30  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/network/ConcurrentMessageDispatcher.cpp: Remove debugging
	information that potentially causes segfault!

	* include/network/JoinThread.h: Fix reset.
	* src/network/JoinThread.cpp: Liekwise.

	* src/dmcsc.cpp: Fix setting next packs.

	* src/network/OutputThread.cpp: Send duplicated models back.
	* include/network/NeighborThread.h: Remove duplication here.

2011-03-29  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/network/JoinThread.cpp: Fix resetting Joiner.

	* include/network/JoinThread.h: Move partial_eqs out of process.
	* src/network/JoinThread.cpp: Likewise.

	* src/network/JoinThread.cpp: Fix asking next strategy.

	* src/solver/RelSatSolver.cpp: Send NULL pointer at the right place.

	* src/network/OutputThread.cpp: Read up to k2+1 from OUT_MQ and
	expect NULL at the end.

	* include/network/ThreadFactory.h: Quick and dirty hack: pass
	query_plan to RelSatSolver so that it can get localV easily as
	invoker is already passed there via StreamingForwardMessage.
	* src/network/RelSatSolverThread.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* src/network/Server.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* src/solver/RelSatSolver.cpp: Pass models_sofar as reference to
	SATSolver to get its value directly.

	* src/network/JoinThread.cpp: Collect joined result into a list
	and return from there (except for the first time).

	* include/dmcs/BaseNotification.h: Adapt to the SHUPUP type of
	messages.

2011-03-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/JoinThread.h: SAT has control over Joiner.
	* src/network/JoinThread.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/network/ConcurrentMessageDispatcher.h: Change to
	send/receive AskNextNotification between SAT and Joiner.
	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.